welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:15: error: type mismatch;
 found   : Unit
 required: Boolean
                                       if (dec=1) {setCouleurBrosse(T(i));marque()}
                                              ^Array2:16: error: type mismatch;
 found   : Unit
 required: Boolean
                                       if (dec=2) {setCouleurBrosse(T(i));marque();avance();setCouleurBrosse(T(i));marque()}
                                              ^